--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,17 +14,16 @@
         android:layout_weight="2"
         android:background="@android:color/holo_orange_dark"
         android:textColor="@android:color/background_light"
-        android:text="TextView1"
-        android:textAlignment="center" />
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/typeActiveNetwork"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textAlignment="center"
         android:background="@android:color/background_dark"
         android:textColor="@android:color/background_light"
-        android:text="TextView2"/>
+        android:textSize="20dp"
+        android:gravity="center" />
 
 </LinearLayout>
