--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_weight="2"
         android:background="@android:color/holo_orange_dark"
         android:textColor="@android:color/background_light"
+        android:textSize="20dp"
         android:gravity="center"/>
 
     <TextView
